--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -68,28 +68,7 @@
                 <div class="profile-body">
                     <div class="about-wrap">
                         <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-8 col-lg-9">
-            <div class="dash-right">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="widget-info margin-top-large">
-                            <div class="widget-head">
-                                <h4><a href="#" title="">Details </a></h4>
-                                <a href="{% url 'core:site-steps' 0 object.pk %}" title="" class="btn btn-sm btn-xs btn-primary"><i
-                                        class="la la-caret-right"></i> Add New Step</a>
-                            </div>
-                            <div class="widget-body">
+                                                       <div class="widget-body">
                                 <ul class="submission-list">
                                     <li>
                                         <strong>Address: {{ object.address }}</strong>
@@ -149,21 +128,28 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
+
+                        </p>
                     </div>
-                    <div class="col-md-6">
+                </div>
+            </div>
+        </div>
+        <div class="col-md-8 col-lg-9">
+            <div class="dash-right">
+                <div class="row">
+                    <div class="col-md-4">
                         <div class="widget-info margin-top-large">
                             <div class="widget-head">
-                                <h4><a href="#" title="">Public Reports</a></h4>
+                                <h4><a href="#" title="">Step List</a></h4>
                                 <a href="#" title="" class="btn btn-sm btn-xs btn-primary" target="_blank"><i
                                         class="la la-caret-right"></i> More</a>
                             </div>
                             <div class="widget-body">
                                 <ul class="submission-list">
+                                    {% for step in step_list  %}
                                     <li>
                                         <img src="assets/img/img-school.png" alt="">
-                                        <a title="View submission detail" href="#"><strong>Household Survey (घरधुरी
-                                            सर्वेक्षण)</strong></a>
+                                        <a title="View submission detail" href="#"><strong>step</strong></a>
                                         <br>
                                         <a href="#" title="View details of user">
                                             <small><i class="la la-user"></i>chapakot</small>
@@ -173,61 +159,81 @@
                                             minutes ago
                                         </small>
                                     </li>
-                                    <li>
-                                        <a title="View submission detail" href="#"><strong>Household Survey (घरधुरी
-                                            सर्वेक्षण)</strong></a>
-                                        <br>
-                                        <a href="#" title="View details of user">
-                                            <small><i class="la la-user"></i>chapakot</small>
-                                        </a>
-                                        <small class="site_icon_float" style=""><i class="la la-clock-o"
-                                                                                   aria-hidden="true"></i> 2 hours, 47
-                                            minutes ago
-                                        </small>
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/img-school.png" alt="">
-                                        <a title="View submission detail" href="#"><strong>Household Survey (घरधुरी
-                                            सर्वेक्षण)</strong></a>
-                                        <br>
-                                        <a href="#" title="View details of user">
-                                            <small><i class="la la-user"></i>chapakot</small>
-                                        </a>
-                                        <small class="site_icon_float" style=""><i class="la la-clock-o"
-                                                                                   aria-hidden="true"></i> 2 hours, 47
-                                            minutes ago
-                                        </small>
-                                    </li>
-                                    <li>
-                                        <a title="View submission detail" href="#"><strong>Household Survey (घरधुरी
-                                            सर्वेक्षण)</strong></a>
-                                        <br>
-                                        <a href="#" title="View details of user">
-                                            <small><i class="la la-user"></i>chapakot</small>
-                                        </a>
-                                        <small class="site_icon_float" style=""><i class="la la-clock-o"
-                                                                                   aria-hidden="true"></i> 2 hours, 47
-                                            minutes ago
-                                        </small>
-                                    </li>
+
+                                   {% endfor %}
+
                                 </ul>
                             </div>
+                             <a href="{% url 'core:site-steps' 0 object.pk %}" title="" class="btn btn-sm btn-xs btn-primary"><i
+                                        class="la la-caret-right"></i> Add New Step</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="widget-info margin-top-large">
+                            <div class="widget-head">
+                                <h4><a href="#" title="">Material List</a></h4>
+                                <a href="" title="" class="btn btn-sm btn-xs btn-primary" target="_blank"><i
+                                        class="la la-caret-right"></i> More</a>
+                            </div>
+                            <div class="widget-body">
+                                <ul class="submission-list">
+                                    {% for material in site_materials  %}
+                                    <li>
+                                        <img src="assets/img/img-school.png" alt="">
+                                        <a title="View submission detail" href="{% url 'core:material_detail' material.pk %}"><strong>material</strong></a>
+                                        <br>
+                                        <a href="#" title="View details of user">
+                                            <small><i class="la la-user"></i>chapakot</small>
+                                        </a>
+                                        <small class="site_icon_float" style=""><i class="la la-clock-o"
+                                                                                   aria-hidden="true"></i> 2 hours, 47
+                                            minutes ago
+                                        </small>
+                                    </li>
+
+                                   {% endfor %}
+
+                                </ul>
+                            </div>
+                             <a href="{% url 'core:material_create' project_id %}" title="" class="btn btn-sm btn-xs btn-primary"><i
+                                        class="la la-caret-right"></i> Add Material</a>
                         </div>
                     </div>
 
-                    <!--Pictures-->
-                    <div class="col-md-12">
+                                        <div class="col-md-4">
                         <div class="widget-info margin-top-large">
                             <div class="widget-head">
-                                <h4><a href="#" title="">Recent Pictures</a></h4>
+                                <h4><a href="#" title="">Reports</a></h4>
                                 <a href="#" title="" class="btn btn-sm btn-xs btn-primary" target="_blank"><i
                                         class="la la-caret-right"></i> More</a>
                             </div>
                             <div class="widget-body">
+                                <ul class="submission-list">
+                                    {% for material in site_materials  %}
+                                    <li>
+                                        <img src="assets/img/img-school.png" alt="">
+                                        <a title="View submission detail" href="#"><strong>material</strong></a>
+                                        <br>
+                                        <a href="#" title="View details of user">
+                                            <small><i class="la la-user"></i>chapakot</small>
+                                        </a>
+                                        <small class="site_icon_float" style=""><i class="la la-clock-o"
+                                                                                   aria-hidden="true"></i> 2 hours, 47
+                                            minutes ago
+                                        </small>
+                                    </li>
 
+                                   {% endfor %}
+
+                                </ul>
                             </div>
+                             <a href="" title="" class="btn btn-sm btn-xs btn-primary"><i
+                                        class="la la-caret-right"></i> Add Report</a>
                         </div>
                     </div>
+
+
+
                 </div>
             </div>
         </div>
