--- a/survey/core/templates/core/material_form.html
+++ b/survey/core/templates/core/material_form.html
@@ -1,8 +1,69 @@
-{% extends 'base.html' %}
+{% extends '_base.html' %}
 
 {% block content %}
-<form method="post" enctype="multipart/form-data">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Submit">
-</form>
+
+    <div class="row no-gutters">
+        <div class="col-md-12">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' %}">Dashboard</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Material Create</li>
+                </ol>
+            </nav>
+        </div>
+        <div class="col-md-4 col-lg-3">
+            <div class="module-school-list">
+                <div class="school-wrap">
+                    <ul class="school-list">
+                        {% if request.user.is_superuser %}
+                            {% for project in projects %}
+                                <li>
+                                    <a href="{% url 'core:project_detail' project.pk %}" title="">
+                                        <img src="{{ MEDIA_URL }}{{ project.logo }}" class="project-logo" alt="">
+                                        <h6>{{ project }}</h6>
+                                        <span>{{ project.address }}</span>
+                                    </a>
+                                </li>{% endfor %}
+                        {% else %}
+                            {% for project in project %}
+                                {% for site in project.sites.all %}
+                                    <li>
+                                        <a href="{% url 'core:site_detail' site.pk %}" title="">
+                                            <img src="assets/img/img-school.png" class="school-logo" alt="">
+                                            <h6>{{ site }}</h6>
+                                            <span>{{ site.address }}</span>
+                                        </a>
+                                    </li>{% endfor %}
+                            {% endfor %}
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-8 col-lg-9">
+            <div class="dash-left">
+                <div class="row">
+                    <form method="post" enctype="multipart/form-data">{% csrf_token %}
+                        {% for error in form.non_field_errors %}
+                            <div class="form-group has-errors text-danger small">
+                                {{ error }}
+                            </div>
+                        {% endfor %}
+                        {% for field in form %}
+                            <div class="form-group">
+                                {{ field.errors }}
+                                {{ field.label_tag }}
+                                {#                                <label for="exampleFormControlInput1">Email address</label>#}
+                                {{ field }}
+                            </div>
+                        {% endfor %}
+                        <div class="col-md-8">
+                            <button type="submit" class="btn btn-primary">Submit
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
