--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -35,7 +35,7 @@
                     <div class="col-md-6">
                         <div class="widget-info margin-top-large">
                             <div class="widget-head">
-                                <h3>Project Details</h3>
+                                <h4>Project Details</h4><a href="{% url 'core:project_update' project_id %}"><h4>Edit Project</h4></a>
                             </div>
                             <div class="widget-head">
                                 <h4><a href="#" title="">Name</a></h4>
