--- a/survey/core/templates/core/material_detail.html
+++ b/survey/core/templates/core/material_detail.html
@@ -49,8 +49,9 @@
                             <div class="widget-info margin-top-large">
                                 <div class="widget-head">
                                     <h4><a href="#" title="">Materials &nbsp</a></h4>
-                                    <h4><a href="{% url 'core:material_update' object.id %}" title="">Edit &nbsp</a></h4>
-                                    <h4><a href="{% url 'core:material_delete' object.id %}" title="">Delete</a></h4>
+                                    <a href="{% url 'core:material_delete' object.id %}" title=""><h4>Delete</h4></a>
+                                    <a href="{% url 'core:material_update' object.id %}" title=""><h4>Edit &nbsp</h4></a>
+
                                 </div>
                                 <div class="widget-body">
                                     <h5>Name</h5><br>
